# whispers

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: container-build.yml  helm-publish.yml
app/: auth.py  config.py  crypto.py  db.py  main.py  models.py
app/static/: styles.css
app/templates/: base.html  forbidden.html  home.html  secret_created.html  view_secret.html
app/whispers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
helm/whispers/: .helmignore  Chart.yaml  values.yaml
helm/whispers/templates/: NOTES.txt  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
