[project]
name = "whispers"
version = "0.1.0"
description = "Whispers: OIDC-based secret sharing"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "authlib==1.3.1",
  "httpx==0.27.2",
  "Jinja2==3.1.4",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "cryptography==43.0.1",
  "SQLAlchemy==2.0.34",
]
#dependencies = [
#  "fastapi==0.115.0",
##  "uvicorn[standard]==0.30.6",
#  "authlib==1.3.1",
#  "python-multipart==0.0.9",
#  "itsdangerous==2.2.0",
#  "cryptography==43.0.1",
#  "SQLAlchemy==2.0.34",
#  "psycopg2-binary==2.9.9",
#]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8080[build-system]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"