[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispers"
version = "0.2.0"
description = "OIDC-protected secret sharing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "authlib==1.3.1",
  "httpx==0.27.2",
  "Jinja2==3.1.4",
  "python-multipart==0.0.9",
  "itsdangerous==2.2.0",
  "cryptography==43.0.1",
  "SQLAlchemy==2.0.34",
  "psycopg2-binary==2.9.9"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]